cmake_minimum_required(VERSION 3.10)
project(intersectionxx)
add_library(intersectionxx INTERFACE)
set(CMAKE_CXX_STANDARD 20)
target_include_directories(intersectionxx INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native -ffast-math -flto")
add_executable(exmp "test.cpp" "include/aabb_aabb.hpp")
target_link_libraries(exmp PUBLIC intersectionxx)
