cmake_minimum_required(VERSION 3.10)
include(FetchContent)
project(intersections_cxx)
add_library(intersections_cxx INTERFACE)
set(CMAKE_CXX_STANDARD 20)
target_include_directories(intersections_cxx INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native -ffast-math -flto")
set(DONT_BUILD_CPPAVX_EXAMPLE True)
FetchContent_Declare(
    cppavx
    GIT_REPOSITORY https://github.com/manuel5975p/cpp-avx-utils.git
)
FetchContent_GetProperties(cppavx)
if(NOT cppavx_POPULATED)
    FetchContent_Populate(cppavx)
    add_subdirectory("${cppavx_SOURCE_DIR}")
endif()
target_link_libraries(intersections_cxx INTERFACE cpp-avx)
add_executable(example1 "example1.cpp")
target_link_libraries(example1 PUBLIC intersections_cxx)
add_executable(example2 "example2.cpp")
target_link_libraries(example2 PUBLIC intersections_cxx)
